--- a/about and contact/css/style.css
+++ b/about and contact/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Rajdhani&display=swap");
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif, Rajdhani;
   margin: 0;
 }
 
@@ -18,7 +18,7 @@ html {
   float: left;
   width: 33.3%;
   margin-bottom: 16px;
-  padding: 0 8px;
+  padding: 8px;
 }
 
 .card {
