--- a/about and contact/css/style.scss
+++ b/about and contact/css/style.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Rajdhani&display=swap");
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif, Rajdhani;
   margin: 0;
 }
 
@@ -10,14 +10,14 @@ html {
 }
 
 *, *:before, *:after {
-  box-sizing: inherit;
+  box-sizing:inherit ;
 }
 
 .column {
   float: left;
   width: 33.3%;
   margin-bottom: 16px;
-  padding: 0 8px;
+  padding: 8px;
 }
 
 .card {
