--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,31 @@ canvas {
   vertical-align: bottom;
 }
 
+/* ---- navbar ---- */
+
+.navbar-wrapper{
+  background-color: rgba(26, 26, 26, .7);
+  height: 55px;
+  width: 100%;
+  position: sticky;
+  top: 0px;
+  justify-content: flex-start !important; 
+}
+
+.navbar{
+  line-height: 35px;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.navbar a {color: rgb(223, 223, 223);}
+
+.navbar li {
+  border-style: solid;
+  border-width: 2px;
+  border-color: blue;
+}
+
 /* ---- stats.js ---- */
 
 .count-particles {
@@ -233,6 +258,13 @@ canvas {
   position: absolute;
   height: 100%;
   width: 100%;
+}
+
+.centered {
+  flex-direction: column;
+  position: absolute;
+  height: 100%;
+  width: 100%;
   justify-content: center;
   align-items: center;
 }
@@ -247,6 +279,7 @@ p {
   font-size: 23px;
   font-family: "Rajdhani";
   font-weight: 400;
+  text-align: center;
 }
 
 :root {
