--- a/css/style.css
+++ b/css/style.css
@@ -181,25 +181,70 @@ canvas {
 
 .navbar-wrapper{
   background-color: rgba(26, 26, 26, .7);
-  height: 55px;
   width: 100%;
   position: sticky;
   top: 0px;
-  justify-content: flex-start !important; 
+  z-index: 100;
+}
+
+.nav-logo-wrapper {
+  padding: 0 20px;
+  /* border-right: solid 1px grey; */
+}
+
+.nav-logo-wrapper:hover {
+  background-color: rgba(59, 59, 59, .7);
+}
+
+.nav-logo {
+  display: block;
+}
+
+.nav-mh {
+  color: #c6c6c6;
+  font-size: 13px;
+  font-family: "Rajdhani";
+  font-weight: 200;
+  text-align: center;
+  line-height: 8px;
+  position: relative;
+  bottom: 8px;
 }
 
 .navbar{
   line-height: 35px;
   font-size: 15px;
   font-weight: bold;
+  display: flex;
+  justify-content: flex-start;
+  padding: 0;
+  margin: 0;
+  /* border-bottom: solid 1px grey; */
 }
 
-.navbar a {color: rgb(223, 223, 223);}
+.navbar a {
+  color: #d6d6d6;
+  font-size: 20px;
+  font-family: "Rajdhani";
+  font-weight: 200;
+  display: block;
+}
 
-.navbar li {
-  border-style: solid;
-  border-width: 2px;
-  border-color: blue;
+.navbar a:hover {
+  text-decoration: none;
+  color: white;
+}
+
+.nav-link {
+  line-height: 100.25px;
+  text-align: center;
+  width: 125px; /* should be changed if links are too wide so they are consistent */
+  padding: 0;
+  /* border-right: solid 1px grey; */
+}
+
+.nav-link:hover {
+  background-color: rgba(59, 59, 59, .7);
 }
 
 /* ---- stats.js ---- */
