--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ canvas {
 .navbar-wrapper {
   background-color: rgba(26, 26, 26, 0.7);
   width: 100%;
-  position: sticky;
+  position: absolute;
   top: 0px;
   z-index: 100;
 }
@@ -211,6 +211,7 @@ canvas {
 }
 
 .navbar {
+  position: sticky;
   line-height: 35px;
   font-size: 15px;
   font-weight: bold;
@@ -363,7 +364,9 @@ body {
 
 /* =============================== contact page css ======================================= */
 
-input[type=text], select, textarea {
+input[type="text"],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -374,7 +377,9 @@ input[type=text], select, textarea {
   resize: vertical;
 }
 
-input[type=email], select, textarea {
+input[type="email"],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -384,7 +389,6 @@ input[type=email], select, textarea {
   margin-bottom: 16px;
   resize: vertical;
 }
-
 
 /* Create two columns that float next to eachother */
 .column {
@@ -395,9 +399,37 @@ input[type=email], select, textarea {
 }
 
 @media screen and (max-width: 600px) {
-  .column, input[type=submit] {
+  .column,
+  input[type="submit"] {
     width: 100%;
     margin-top: 0;
   }
-} 
+}
 
+/* about page */
+.aboutPage {
+  width: 100%;
+  height: 100%;
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  padding: 0;
+}
+
+.aboutSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  scroll-snap-align: start;
+}
+
+.aboutBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  height: 70%;
+  background-color: rgba(26, 26, 26, 0.7);
+}
