--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ canvas {
 .navbar-wrapper {
   background-color: rgba(26, 26, 26, 0.7);
   width: 100%;
-  position: absolute;
+  position: sticky;
   top: 0px;
   z-index: 100;
 }
@@ -211,7 +211,6 @@ canvas {
 }
 
 .navbar {
-  position: sticky;
   line-height: 35px;
   font-size: 15px;
   font-weight: bold;
@@ -364,9 +363,7 @@ body {
 
 /* =============================== contact page css ======================================= */
 
-input[type="text"],
-select,
-textarea {
+input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -377,9 +374,7 @@ textarea {
   resize: vertical;
 }
 
-input[type="email"],
-select,
-textarea {
+input[type=email], select, textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -389,6 +384,7 @@ textarea {
   margin-bottom: 16px;
   resize: vertical;
 }
+
 
 /* Create two columns that float next to eachother */
 .column {
@@ -399,37 +395,9 @@ textarea {
 }
 
 @media screen and (max-width: 600px) {
-  .column,
-  input[type="submit"] {
+  .column, input[type=submit] {
     width: 100%;
     margin-top: 0;
   }
-}
+} 
 
-/* about page */
-.aboutPage {
-  width: 100%;
-  height: 100%;
-  scroll-snap-type: y mandatory;
-  overflow-y: scroll;
-  padding: 0;
-}
-
-.aboutSection {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  scroll-snap-align: start;
-}
-
-.aboutBox {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 90%;
-  height: 70%;
-  background-color: rgba(26, 26, 26, 0.7);
-}
