--- a/css/about.css
+++ b/css/about.css
@@ -109,51 +109,10 @@ q:before,
 q:after {
   content: none;
 }
-a {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent;
-  text-decoration: none;
-}
-mark {
-  background-color: #ff9;
-  color: #000;
-  font-style: italic;
-  font-weight: bold;
-}
-del {
-  text-decoration: line-through;
-}
-abbr[title],
-dfn[title] {
-  border-bottom: 1px dotted;
-  cursor: help;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
-}
-input,
-select {
-  vertical-align: middle;
-}
-li {
-  list-style: none;
-}
 
 /* =============================================================================
-      My CSS
-      ========================================================================== */
+         My CSS
+         ========================================================================== */
 
 /* ---- base ---- */
 
@@ -181,7 +140,7 @@ canvas {
 .navbar-wrapper {
   background-color: rgba(26, 26, 26, 0.7);
   width: 100%;
-  position: sticky;
+  position: absolute;
   top: 0px;
   z-index: 100;
 }
@@ -211,6 +170,7 @@ canvas {
 }
 
 .navbar {
+  position: sticky;
   line-height: 35px;
   font-size: 15px;
   font-weight: bold;
@@ -298,12 +258,6 @@ canvas {
 }
 
 /* Main CSS  */
-.image-box {
-  flex-direction: column;
-  position: absolute;
-  height: 100%;
-  width: 100%;
-}
 
 .centered {
   flex-direction: column;
@@ -363,7 +317,10 @@ body {
 
 /* =============================== contact page css ======================================= */
 
-input[type=text], select, textarea {
+input[type="text"],
+input[type="email"],
+select,
+textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -373,18 +330,6 @@ input[type=text], select, textarea {
   margin-bottom: 16px;
   resize: vertical;
 }
-
-input[type=email], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  margin-top: 6px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
 
 /* Create two columns that float next to eachother */
 .column {
@@ -395,9 +340,53 @@ input[type=email], select, textarea {
 }
 
 @media screen and (max-width: 600px) {
-  .column, input[type=submit] {
+  .column,
+  input[type="submit"] {
     width: 100%;
     margin-top: 0;
   }
-} 
+}
 
+/* about page */
+.aboutPage {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  overflow-y: scroll;
+  flex-direction: column;
+  scroll-snap-type: y mandatory;
+  position: absolute;
+}
+
+.aboutSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  scroll-snap-align: start;
+}
+
+.aboutBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  height: 70%;
+  background-color: rgba(26, 26, 26, 0.7);
+}
+
+.aboutPage::-webkit-scrollbar {
+  width: 1em;
+}
+
+.aboutPage::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.aboutPage::-webkit-scrollbar-thumb {
+  background-color: rgb(85, 85, 85);
+  outline: none;
+  border-radius: 10px;
+}
