--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,9 @@
    ========================================================================== */
 @import url("https://fonts.googleapis.com/css2?family=Rajdhani&display=swap");
 
-html,
+html {
+  height: 100%;
+}
 body,
 div,
 span,
@@ -208,10 +210,11 @@ canvas {
 
 .count-particles {
   background: #000022;
-  position: absolute;
+  position: fixed;
   top: 48px;
   left: 0;
-  width: 80px;
+  width: 100%;
+  height: 100%;
   color: #13e8e9;
   font-size: 0.8em;
   text-align: left;
@@ -234,8 +237,8 @@ canvas {
 
 #particles-js {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #202020;
   background-image: url("");
   background-size: cover;
