--- a/src/css/style.css
+++ b/src/css/style.css
@@ -169,7 +169,7 @@ canvas {
   width: 100%;
   height: 100%;
   background-color: #202020;
-  background-image: url("");
+  /* background-image: url(""); */
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
