still wip Names now links. very little has changed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -332,14 +332,12 @@ textarea {
 }
 
 /* Making the on hover effect for the team tiles */
-.teamTileNameLinks {
-    background-image: none !important;
-}
+/* .teamTileNameLinks {
+     background-image: none !important; 
+     background-color: rgba(26, 26, 26, 0.7); 
+} */
 
-.teamTitleNameLinks:hover {
-    background-image: initial;
-    color: black;
-}
+/* a.teamTileNameLinks:hover {} */
 
 /* This is for the profile tiles, team tile, and navbar so they work on phones */
 @media (min-width: 400px) {
