--- a/src/css/style.css
+++ b/src/css/style.css
@@ -123,6 +123,7 @@ body {
   width: 100%;
   height: 100%;
   background: #111;
+  overflow: hidden;
 }
 
 html {
@@ -131,6 +132,7 @@ html {
 
 body {
   font: normal 75% Arial, Helvetica, sans-serif;
+  -webkit-overflow-scrolling: touch;
 }
 
 canvas {
@@ -263,37 +265,6 @@ textarea {
     width: 100%;
     margin-top: 0;
   }
-}
-/* about page */
-.aboutPage {
-  width: 100%;
-  height: 91%;
-  padding: 0;
-  overflow-y: scroll;
-  flex-direction: column;
-  scroll-snap-type: y mandatory;
-  position: absolute;
-}
-
-.aboutSection {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  scroll-snap-align: start;
-  z-index: 10;
-}
-
-.aboutBox {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 90%;
-  height: 70%;
-  background-color: rgba(26, 26, 26, 0.7);
 }
 
 .aboutPage::-webkit-scrollbar {
