cleaned up padding and margins for the tiles

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -311,7 +311,7 @@ textarea {
   .homeLogoText {
     font-size: 1rem;
   }
-  .card-body {
+  .profileTileCardBody {
     padding: 8px;
   }
   .profileTileCardStyle {
@@ -353,6 +353,7 @@ textarea {
   }
   .teamTileBodyStyle {
     grid-template-rows: 30px auto 30px;
+    padding: 8px;
   }
   .teamTileTitleStyle {
     font-size: 0.6rem;
@@ -373,7 +374,7 @@ textarea {
   .homeLogoText {
     font-size: 1.2rem;
   }
-  .card-body {
+  .profileTileCardBody {
     padding: 10px;
   }
   .profileTileCardStyle {
@@ -415,6 +416,7 @@ textarea {
   }
   .teamTileBodyStyle {
     grid-template-rows: 30px auto 30px;
+    padding: 10px;
   }
   .teamTileTitleStyle {
     font-size: 0.6rem;
@@ -434,6 +436,9 @@ textarea {
   }
   .homeLogoText {
     font-size: 1.3rem;
+  }
+  .profileTileCardBody {
+    padding: 20px;
   }
   .profileTileCardStyle {
     height: 150px;
@@ -471,6 +476,7 @@ textarea {
   }
   .teamTileBodyStyle {
     grid-template-rows: 35px auto 30px;
+    padding: 20px;
   }
   .teamTileTitleStyle {
     font-size: 0.8rem;
